# EZrecipe

./: README.md  forms.py  initDB.py  main.py  models.py  pyproject.toml  server.env  test.db
static/: reg4.css  scripts.js  styles.css
templates/: Login.html  index.html  layout.html  personal_user.html  register.html  search.html  temp.css  temp.js
