[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
name = "root"
version = "0.0.0"
[tool.poetry.dependencies]
flask = "==1.0.2"
python = "^3.7"
werkzeug = "^1.0"
flask-sqlalchemy = "^2.4"
flask-jwt = "^0.3.2"
sqlalchemy = "^1.3"
flask-wtf = "^0.14.3"
wtforms = "^2.3"
flask-login = "^0.5.0"
